[package]
name = "analos-monitoring-system"
version = "0.1.0"
description = "Advanced Monitoring and Alerting System for NFT Launchpad"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_monitoring"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-security-txt = "1.1.1"
default-env = "0.1.1"
