[package]
name = "analos-nft-launchpad"
version = "0.1.0"
description = "Blind Mint & Reveal NFT Launchpad for Analos using Metaplex Bubblegum"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_nft_launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-bubblegum = "0.8.0"
mpl-token-metadata = "4.1.3"
spl-account-compression = "0.1.0"
solana-security-txt = "1.1.1"
default-env = "0.1.1"
