[package]
name = "analos-price-oracle"
version = "0.1.0"
description = "Price oracle for $LOS market cap and USD-pegged pricing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_price_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-security-txt = "1.1.1"
default-env = "0.1.1"
