[package]
name = "analos-rarity-oracle"
version = "0.1.0"
description = "Rarity oracle and metadata verification for NFT collections"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_rarity_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
# mpl-token-metadata = "4.1.3"  # Commented out - not used
solana-security-txt = "1.1.1"
default-env = "0.1.1"
