[package]
name = "analos-token-launch"
version = "0.1.0"
description = "Token launch and bonding program for NFT collections"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_token_launch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
# mpl-token-metadata = "4.1.3"  # Commented out - not used
spl-token = "3.5.0"
spl-associated-token-account = "2.2.0"
solana-security-txt = "1.1.1"
default-env = "0.1.1"
