[package]
name = "analos-token-lock-enhanced"
version = "0.1.0"
description = "Enhanced Token Lock Program with Advanced Security"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "analos_token_lock_enhanced"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-security-txt = "1.1.1"
default-env = "0.1.1"
